# tr-autonomy-2-clarsbyte

src/control/: CMakeLists.txt
src/control/install/: local_setup.sh  setup.sh
src/control/install/control/share/control/: local_setup.sh  package.sh  package.xml
src/control/log/: latest_build
src/control/src/: control.cpp
